--- a/package.json
+++ b/package.json
@@ -6,20 +6,18 @@
     "type": "git",
     "url": "git@github.com:aliaksei-andrasiuk/job-serf-frontend.git"
   },
+  "homepage": "https://aliaksei-andrasiuk.github.io/job-serf-frontend",
   "dependencies": {
-    "@types/node": "^16.18.40",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
     "bootstrap": "^5.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "sass": "^1.65.1",
-    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -45,7 +43,13 @@
     ]
   },
   "devDependencies": {
+    "@types/node": "^16.18.40",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
+    "typescript": "^4.9.5",
     "eslint-config-prettier": "^9.0.0",
-    "prettier": "^3.0.1"
+    "prettier": "^3.0.1",
+    "sass": "^1.65.1",
+    "gh-pages": "^6.0.0"
   }
 }
